# espectre

./: .gitignore  ADVANCED_FEATURES.md  CALIBRATION.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ESP32-PLATFORM-SUPPORT.md  PERFORMANCE.md  README.md  ROADMAP.md  SETUP.md  TROUBLESHOOTING.md  TUNING.md  codecov.yml  espectre-c6.yaml  espectre-cli.py  espectre-cli.sh  espectre-monitor.html  espectre-s3.yaml  espectre-theremin.html  espectre.yaml  requirements.txt  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
.github/: FUNDING.yml  cla-signatures.json  dependabot.yml
.github/ISSUE_TEMPLATE/: custom.md  feature_request.md
.github/scripts/: build_docs.py
.github/workflows/: build.yml  ci.yml  cla.yml  dco.yml  pr-target-check.yml  release.yml  snapshot.yml  stale.yml
arduino_espectre/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONVERSATION_LOG.md  NOTES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TUNING.md  arduino_espectre.ino  config.h  csi_manager.cpp  csi_manager.h  gain_controller.cpp  gain_controller.h  library.properties  mvs_detector.cpp  mvs_detector.h  nbvi_calibrator.cpp  nbvi_calibrator.h  platformio.ini  utils.h
arduino_espectre/DISPLAY_TEST/: DISPLAY_TEST.ino
arduino_espectre/HARDWARE_TEST/: HARDWARE_TEST.ino  README.md  config.h
components/espectre/: __init__.py  base_calibrator.cpp  base_calibrator.h  base_detector.cpp  base_detector.h  calibrate_switch.h  calibration_file_buffer.cpp  calibration_file_buffer.h  calibration_manager.cpp  calibration_manager.h  calibrator_interface.h  config_manager.cpp  config_manager.h  csi_filters.cpp  csi_manager.cpp  csi_manager.h  csi_processor.cpp  csi_processor.h  detector_interface.h  espectre.cpp  espectre.h  espectre_component.cpp  espectre_component.h  filters.cpp  filters.h  gain_controller.cpp  gain_controller.h  gesture_detector.cpp  gesture_detector.h  gesture_features.h  gesture_weights.h  library.json  ml_detector.cpp  ml_detector.h  ml_features.h  ml_weights.h  mvs_detector.cpp  mvs_detector.h  nbvi_calibrator.cpp  nbvi_calibrator.h  (+21 more)
docs/: analytics.js  components.js  index.html  main.js  sitemap.xml  styles.css
docs/game/: README.md  game.css  game.js  index.html
examples/: automations.yaml  configuration.yaml  csi_traffic_generator.py  espectre-c3-dev.yaml  espectre-c3-super-mini.yaml  espectre-c3-uart.yaml  espectre-c3.yaml  espectre-c5-dev.yaml  espectre-c5.yaml  espectre-c6-dev.yaml  espectre-c6.yaml  espectre-esp32-dev.yaml  espectre-esp32.yaml  espectre-s2-dev.yaml  espectre-s2.yaml  espectre-s3-LED.yaml  espectre-s3-dev.yaml  espectre-s3-websrv.yaml  espectre-s3.yaml  home-assistant-dashboard-dev.yaml  home-assistant-dashboard.yaml
examples/uart/: espectre-c3-dev.yaml  espectre-c3.yaml  espectre-c5-dev.yaml  espectre-c5.yaml  espectre-c6-dev.yaml  espectre-c6.yaml  espectre-esp32.yaml  espectre-s3-dev.yaml  espectre-s3.yaml
main/: CMakeLists.txt  Kconfig.projbuild  calibration.c  calibration.h  config_manager.c  config_manager.h  csi_features.c  csi_features.h  csi_processor.c  csi_processor.h  detection_engine.c  detection_engine.h  espectre.c  espectre.h  filters.c  filters.h  idf_component.yml  mqtt_commands.c  mqtt_commands.h  mqtt_handler.c  mqtt_handler.h  nbvi_calibrator.c  nbvi_calibrator.h  nvs_storage.c  nvs_storage.h  segmentation.c  segmentation.h  statistics.c  statistics.h  traffic_generator.c  traffic_generator.h  validation.c  validation.h  wavelet.c  wavelet.h  wifi_manager.c  wifi_manager.h
micro-espectre/: .coverage  .gitignore  ALGORITHMS.md  ML_DATA_COLLECTION.md  README.md  config_local.py.example  deploy.sh  espectre-monitor.html  me  requirements.txt
micro-espectre/data/: DATASET_QUALITY_CHECK.md  dataset_info.json
micro-espectre/examples/: debug_csi.py
micro-espectre/models/: feature_scaler.npz  gesture_experiment_matrix.csv  gesture_scaler.npz  gesture_test_data.npz  ml_test_data.npz  motion_detector_small.tflite
micro-espectre/notebooks/: 01_csi_data_explorer.ipynb  02_feature_extraction_and_ml.ipynb
micro-espectre/src/: __init__.py  band_calibrator.py  calibrator_interface.py  config.py  config_local.py.example  csi_streamer.py  data_collector.py  detector_interface.py  display.py  features.py  filters.py  gesture_detector.py  gesture_features.py  gesture_weights.py  main.py  ml_detector.py  ml_weights.py  mvs_detector.py  nbvi_calibrator.py  nvs_storage.py  p95_calibrator.py  pca_calibrator.py  pca_detector.py  segmentation.py  threshold.py  traffic_generator.py  utils.py
micro-espectre/tests/: conftest.py  test_band_calibrator.py  test_config.py  test_features.py  test_features_experimental.py  test_filters.py  test_gesture_detector.py  test_gesture_features.py  test_ml_detector.py  (+11 more)
test/: README.md  platformio.ini  run_coverage.sh  test_segmentation_local.py
test_app/: CMakeLists.txt  README.md  analyze_test_results.py  convert_csi_to_header.py  convert_tests.py  partitions.csv  sdkconfig.defaults  test_segmentation_local.py
test_app/main/: CMakeLists.txt  idf_component.yml  mock_csi_data.h  real_csi_data.h  real_csi_data_eps32_s3.h  real_csi_data_esp32.h  real_csi_data_esp32_c6.h  test_app_main.c  test_calibration.c  test_case_esp.h  test_detection_approaches.c  test_doppler_features.c  test_feature_classification_performance.c  test_features.c  test_filters.c  test_home_assistant_integration.c  test_pca_subcarrier.c  test_performance_suite.c  test_real_calibration.c  test_segmentation.c  test_segmentation_tuning.c  test_statistical_approach.c  test_temporal_robustness.c  test_threshold_optimization.c  test_wavelet.c
(+328 files in other folders)
