idf_component_register(SRCS "test_app_main.c"
                            "test_performance_suite.c"
                            "test_segmentation.c"
                            "test_features.c"
                            "test_pca_subcarrier.c"
                            "test_filters.c"
                            "test_wavelet.c"
                            # Main component sources
                            "${CMAKE_CURRENT_LIST_DIR}/../../main/filters.c"
                            "${CMAKE_CURRENT_LIST_DIR}/../../main/wavelet.c"
                            "${CMAKE_CURRENT_LIST_DIR}/../../main/csi_processor.c"
                            "${CMAKE_CURRENT_LIST_DIR}/../../main/csi_features.c"
                            "${CMAKE_CURRENT_LIST_DIR}/../../main/config_manager.c"
                            "${CMAKE_CURRENT_LIST_DIR}/../../main/nvs_storage.c"
                            "${CMAKE_CURRENT_LIST_DIR}/../../main/validation.c"
                       INCLUDE_DIRS "." "${CMAKE_CURRENT_LIST_DIR}/../../main"
                       REQUIRES unity esp_wifi nvs_flash esp_timer esp-dsp)
